sg-alb.tf
resource "aws_security_group" "alb_sg" {
  name        = "acesso_alb"
  description = "Allow traffic"
  vpc_id      = data.aws_vpc.app.id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "acesso_sourcegraph"
  }
}

resource "aws_security_group_rule" "alb_http" {
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  cidr_blocks = [ "0.0.0.0/0" ] 
  security_group_id        = aws_security_group.alb_sg.id
}
